# profiling_bot

./: .env  .gitignore  Dockerfile  LICENSE.txt  README.md  compose.yml  main.py  nohup.out  pyproject.toml  requirements.txt  run.py
bot/: main.py  middlewares.py
bot/func/: auth.py
bot/states/: fsm.py
config/: config.py
kb/: main_menu.py
map/: download.py  files.py  main.py  parsing.py
map/generate_map/: coordinates.txt  leaflet.html  leaflet_base.html
map/generate_map/6786871064/: index.html  leaflet.html
map/generate_map/944360812/: index.html  leaflet.html
map/temp/: coordinates.txt
ocr/: main.py
scripts/: entrypoint-bot.sh
