[project]
name = "profiling-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"



dependencies = [
    "aiogram>=3.26.0",
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "easyocr>=1.7.2",
    "fake-useragent>=2.2.0",
    "lxml>=6.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "selenium>=4.41.0",
    "webdriver-manager>=4.0.2",
    "playwright>=1.53.0",
    "aiofiles>=25.1.0",
    "numpy>=2.2.6",
    "pillow>=12.1.1",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'manylinux1_x86_64'",
]